compiler/src/antlr/TromboneParser.cpp

// Generated from ../../antlr/Trombone.g4 by ANTLR 4.13.2


#include "TromboneVisitor.h"

#include "TromboneParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TromboneParserStaticData final {
  TromboneParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TromboneParserStaticData(const TromboneParserStaticData&) = delete;
  TromboneParserStaticData(TromboneParserStaticData&&) = delete;
  TromboneParserStaticData& operator=(const TromboneParserStaticData&) = delete;
  TromboneParserStaticData& operator=(TromboneParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tromboneParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TromboneParserStaticData> tromboneParserStaticData = nullptr;

void tromboneParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tromboneParserStaticData != nullptr) {
    return;
  }
#else
  assert(tromboneParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TromboneParserStaticData>(
    std::vector<std::string>{
      "program", "functionDecl", "paramList", "param", "returnType", "type", 
      "block", "statement", "varDecl", "assignment", "arrayAssignment", 
      "returnStmt", "printStmt", "whileStmt", "ifStmt", "funcCall", "argList", 
      "expr"
    },
    std::vector<std::string>{
      "", "'fn'", "'('", "')'", "','", "':'", "'->'", "'int'", "'['", "']'", 
      "'{'", "'}'", "';'", "'let'", "'='", "'return'", "'print'", "'while'", 
      "'if'", "'else'", "'*'", "'/'", "'+'", "'-'", "'<'", "'>'", "'<='", 
      "'>='", "'=='", "'!='", "'read'", "'array'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "IDENTIFIER", 
      "NUMBER", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tromboneParserStaticData = std::move(staticData);
}

}

TromboneParser::TromboneParser(TokenStream *input) : TromboneParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TromboneParser::TromboneParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TromboneParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tromboneParserStaticData->atn, tromboneParserStaticData->decisionToDFA, tromboneParserStaticData->sharedContextCache, options);
}

TromboneParser::~TromboneParser() {
  delete _interpreter;
}

const atn::ATN& TromboneParser::getATN() const {
  return *tromboneParserStaticData->atn;
}

std::string TromboneParser::getGrammarFileName() const {
  return "Trombone.g4";
}

const std::vector<std::string>& TromboneParser::getRuleNames() const {
  return tromboneParserStaticData->ruleNames;
}

const dfa::Vocabulary& TromboneParser::getVocabulary() const {
  return tromboneParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TromboneParser::getSerializedATN() const {
  return tromboneParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

TromboneParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TromboneParser::ProgramContext::EOF() {
  return getToken(TromboneParser::EOF, 0);
}

std::vector<TromboneParser::FunctionDeclContext *> TromboneParser::ProgramContext::functionDecl() {
  return getRuleContexts<TromboneParser::FunctionDeclContext>();
}

TromboneParser::FunctionDeclContext* TromboneParser::ProgramContext::functionDecl(size_t i) {
  return getRuleContext<TromboneParser::FunctionDeclContext>(i);
}


size_t TromboneParser::ProgramContext::getRuleIndex() const {
  return TromboneParser::RuleProgram;
}


std::any TromboneParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::ProgramContext* TromboneParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, TromboneParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(36);
      functionDecl();
      setState(39); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TromboneParser::T__0);
    setState(41);
    match(TromboneParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

TromboneParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TromboneParser::FunctionDeclContext::IDENTIFIER() {
  return getToken(TromboneParser::IDENTIFIER, 0);
}

TromboneParser::BlockContext* TromboneParser::FunctionDeclContext::block() {
  return getRuleContext<TromboneParser::BlockContext>(0);
}

TromboneParser::ParamListContext* TromboneParser::FunctionDeclContext::paramList() {
  return getRuleContext<TromboneParser::ParamListContext>(0);
}

TromboneParser::ReturnTypeContext* TromboneParser::FunctionDeclContext::returnType() {
  return getRuleContext<TromboneParser::ReturnTypeContext>(0);
}


size_t TromboneParser::FunctionDeclContext::getRuleIndex() const {
  return TromboneParser::RuleFunctionDecl;
}


std::any TromboneParser::FunctionDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitFunctionDecl(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::FunctionDeclContext* TromboneParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, TromboneParser::RuleFunctionDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    match(TromboneParser::T__0);
    setState(44);
    match(TromboneParser::IDENTIFIER);
    setState(45);
    match(TromboneParser::T__1);
    setState(47);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TromboneParser::IDENTIFIER) {
      setState(46);
      paramList();
    }
    setState(49);
    match(TromboneParser::T__2);
    setState(51);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TromboneParser::T__5) {
      setState(50);
      returnType();
    }
    setState(53);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

TromboneParser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TromboneParser::ParamContext *> TromboneParser::ParamListContext::param() {
  return getRuleContexts<TromboneParser::ParamContext>();
}

TromboneParser::ParamContext* TromboneParser::ParamListContext::param(size_t i) {
  return getRuleContext<TromboneParser::ParamContext>(i);
}


size_t TromboneParser::ParamListContext::getRuleIndex() const {
  return TromboneParser::RuleParamList;
}


std::any TromboneParser::ParamListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitParamList(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::ParamListContext* TromboneParser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 4, TromboneParser::RuleParamList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    param();
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TromboneParser::T__3) {
      setState(56);
      match(TromboneParser::T__3);
      setState(57);
      param();
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

TromboneParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TromboneParser::ParamContext::IDENTIFIER() {
  return getToken(TromboneParser::IDENTIFIER, 0);
}

TromboneParser::TypeContext* TromboneParser::ParamContext::type() {
  return getRuleContext<TromboneParser::TypeContext>(0);
}


size_t TromboneParser::ParamContext::getRuleIndex() const {
  return TromboneParser::RuleParam;
}


std::any TromboneParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::ParamContext* TromboneParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 6, TromboneParser::RuleParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(TromboneParser::IDENTIFIER);
    setState(64);
    match(TromboneParser::T__4);
    setState(65);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnTypeContext ------------------------------------------------------------------

TromboneParser::ReturnTypeContext::ReturnTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TromboneParser::TypeContext* TromboneParser::ReturnTypeContext::type() {
  return getRuleContext<TromboneParser::TypeContext>(0);
}


size_t TromboneParser::ReturnTypeContext::getRuleIndex() const {
  return TromboneParser::RuleReturnType;
}


std::any TromboneParser::ReturnTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitReturnType(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::ReturnTypeContext* TromboneParser::returnType() {
  ReturnTypeContext *_localctx = _tracker.createInstance<ReturnTypeContext>(_ctx, getState());
  enterRule(_localctx, 8, TromboneParser::RuleReturnType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(TromboneParser::T__5);
    setState(68);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

TromboneParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TromboneParser::TypeContext::getRuleIndex() const {
  return TromboneParser::RuleType;
}


std::any TromboneParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::TypeContext* TromboneParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 10, TromboneParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TromboneParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(70);
        match(TromboneParser::T__6);
        break;
      }

      case TromboneParser::T__7: {
        enterOuterAlt(_localctx, 2);
        setState(71);
        match(TromboneParser::T__7);
        setState(72);
        match(TromboneParser::T__6);
        setState(73);
        match(TromboneParser::T__8);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

TromboneParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TromboneParser::StatementContext *> TromboneParser::BlockContext::statement() {
  return getRuleContexts<TromboneParser::StatementContext>();
}

TromboneParser::StatementContext* TromboneParser::BlockContext::statement(size_t i) {
  return getRuleContext<TromboneParser::StatementContext>(i);
}


size_t TromboneParser::BlockContext::getRuleIndex() const {
  return TromboneParser::RuleBlock;
}


std::any TromboneParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::BlockContext* TromboneParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 12, TromboneParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(TromboneParser::T__9);
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4295467008) != 0)) {
      setState(77);
      statement();
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(83);
    match(TromboneParser::T__10);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

TromboneParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TromboneParser::VarDeclContext* TromboneParser::StatementContext::varDecl() {
  return getRuleContext<TromboneParser::VarDeclContext>(0);
}

TromboneParser::AssignmentContext* TromboneParser::StatementContext::assignment() {
  return getRuleContext<TromboneParser::AssignmentContext>(0);
}

TromboneParser::ArrayAssignmentContext* TromboneParser::StatementContext::arrayAssignment() {
  return getRuleContext<TromboneParser::ArrayAssignmentContext>(0);
}

TromboneParser::FuncCallContext* TromboneParser::StatementContext::funcCall() {
  return getRuleContext<TromboneParser::FuncCallContext>(0);
}

TromboneParser::ReturnStmtContext* TromboneParser::StatementContext::returnStmt() {
  return getRuleContext<TromboneParser::ReturnStmtContext>(0);
}

TromboneParser::PrintStmtContext* TromboneParser::StatementContext::printStmt() {
  return getRuleContext<TromboneParser::PrintStmtContext>(0);
}

TromboneParser::WhileStmtContext* TromboneParser::StatementContext::whileStmt() {
  return getRuleContext<TromboneParser::WhileStmtContext>(0);
}

TromboneParser::IfStmtContext* TromboneParser::StatementContext::ifStmt() {
  return getRuleContext<TromboneParser::IfStmtContext>(0);
}


size_t TromboneParser::StatementContext::getRuleIndex() const {
  return TromboneParser::RuleStatement;
}


std::any TromboneParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::StatementContext* TromboneParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 14, TromboneParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(105);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(85);
      varDecl();
      setState(86);
      match(TromboneParser::T__11);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(88);
      assignment();
      setState(89);
      match(TromboneParser::T__11);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(91);
      arrayAssignment();
      setState(92);
      match(TromboneParser::T__11);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(94);
      funcCall();
      setState(95);
      match(TromboneParser::T__11);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(97);
      returnStmt();
      setState(98);
      match(TromboneParser::T__11);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(100);
      printStmt();
      setState(101);
      match(TromboneParser::T__11);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(103);
      whileStmt();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(104);
      ifStmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

TromboneParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TromboneParser::VarDeclContext::IDENTIFIER() {
  return getToken(TromboneParser::IDENTIFIER, 0);
}

TromboneParser::TypeContext* TromboneParser::VarDeclContext::type() {
  return getRuleContext<TromboneParser::TypeContext>(0);
}

TromboneParser::ExprContext* TromboneParser::VarDeclContext::expr() {
  return getRuleContext<TromboneParser::ExprContext>(0);
}


size_t TromboneParser::VarDeclContext::getRuleIndex() const {
  return TromboneParser::RuleVarDecl;
}


std::any TromboneParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::VarDeclContext* TromboneParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 16, TromboneParser::RuleVarDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(TromboneParser::T__12);
    setState(108);
    match(TromboneParser::IDENTIFIER);
    setState(109);
    match(TromboneParser::T__4);
    setState(110);
    type();
    setState(111);
    match(TromboneParser::T__13);
    setState(112);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

TromboneParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TromboneParser::AssignmentContext::IDENTIFIER() {
  return getToken(TromboneParser::IDENTIFIER, 0);
}

TromboneParser::ExprContext* TromboneParser::AssignmentContext::expr() {
  return getRuleContext<TromboneParser::ExprContext>(0);
}


size_t TromboneParser::AssignmentContext::getRuleIndex() const {
  return TromboneParser::RuleAssignment;
}


std::any TromboneParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::AssignmentContext* TromboneParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 18, TromboneParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(TromboneParser::IDENTIFIER);
    setState(115);
    match(TromboneParser::T__13);
    setState(116);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayAssignmentContext ------------------------------------------------------------------

TromboneParser::ArrayAssignmentContext::ArrayAssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TromboneParser::ArrayAssignmentContext::IDENTIFIER() {
  return getToken(TromboneParser::IDENTIFIER, 0);
}

std::vector<TromboneParser::ExprContext *> TromboneParser::ArrayAssignmentContext::expr() {
  return getRuleContexts<TromboneParser::ExprContext>();
}

TromboneParser::ExprContext* TromboneParser::ArrayAssignmentContext::expr(size_t i) {
  return getRuleContext<TromboneParser::ExprContext>(i);
}


size_t TromboneParser::ArrayAssignmentContext::getRuleIndex() const {
  return TromboneParser::RuleArrayAssignment;
}


std::any TromboneParser::ArrayAssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitArrayAssignment(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::ArrayAssignmentContext* TromboneParser::arrayAssignment() {
  ArrayAssignmentContext *_localctx = _tracker.createInstance<ArrayAssignmentContext>(_ctx, getState());
  enterRule(_localctx, 20, TromboneParser::RuleArrayAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(TromboneParser::IDENTIFIER);
    setState(119);
    match(TromboneParser::T__7);
    setState(120);
    expr(0);
    setState(121);
    match(TromboneParser::T__8);
    setState(122);
    match(TromboneParser::T__13);
    setState(123);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

TromboneParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TromboneParser::ExprContext* TromboneParser::ReturnStmtContext::expr() {
  return getRuleContext<TromboneParser::ExprContext>(0);
}


size_t TromboneParser::ReturnStmtContext::getRuleIndex() const {
  return TromboneParser::RuleReturnStmt;
}


std::any TromboneParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::ReturnStmtContext* TromboneParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 22, TromboneParser::RuleReturnStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(TromboneParser::T__14);
    setState(126);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

TromboneParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TromboneParser::ExprContext* TromboneParser::PrintStmtContext::expr() {
  return getRuleContext<TromboneParser::ExprContext>(0);
}


size_t TromboneParser::PrintStmtContext::getRuleIndex() const {
  return TromboneParser::RulePrintStmt;
}


std::any TromboneParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::PrintStmtContext* TromboneParser::printStmt() {
  PrintStmtContext *_localctx = _tracker.createInstance<PrintStmtContext>(_ctx, getState());
  enterRule(_localctx, 24, TromboneParser::RulePrintStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(TromboneParser::T__15);
    setState(129);
    match(TromboneParser::T__1);
    setState(130);
    expr(0);
    setState(131);
    match(TromboneParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStmtContext ------------------------------------------------------------------

TromboneParser::WhileStmtContext::WhileStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TromboneParser::ExprContext* TromboneParser::WhileStmtContext::expr() {
  return getRuleContext<TromboneParser::ExprContext>(0);
}

TromboneParser::BlockContext* TromboneParser::WhileStmtContext::block() {
  return getRuleContext<TromboneParser::BlockContext>(0);
}


size_t TromboneParser::WhileStmtContext::getRuleIndex() const {
  return TromboneParser::RuleWhileStmt;
}


std::any TromboneParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TromboneVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}

TromboneParser::WhileStmtContext* TromboneParser::whileStmt() {
  WhileStmtContext *_localctx = _tracker.createInstance<WhileStmtContext>(_ctx, getState());
  enterRule(_localctx, 26, TromboneParser::RuleWhileStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(133);
    match(TromboneParser::T__16);
    setState(134);
    expr(0);
    setState(135);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

TromboneParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TromboneParser::ExprContext *> TromboneParser::IfStmtContext::expr() {
  return getRuleContexts<TromboneParser::ExprContext>();
}

TromboneParser::ExprContext* TromboneParser::IfStmtContext::expr(size_t i) {
  return getRuleContext<TromboneParser::ExprContext>(i);
}
